--- a/public/index.html
+++ b/public/index.html
@@ -2,15 +2,12 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    
+
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
-    <meta
-      name="description"
-      content="Web site created using create-react-app"
-    />
-    
+    <meta name="description" content="Web site created using create-react-app" />
+
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/apple-touch-icon.png" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
@@ -27,6 +24,14 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
     <title>Dylan Souvage Portfolio</title>
+
+    <meta property="og:title" content="Dylan Souvage Portfolio" />
+    <meta
+      property="og:image"
+      content="https://raw.githubusercontent.com/firefelix/dsouvage-homepage/master/src/data/bouldersit2.jpg"
+    />
+    <meta property="og:description" content="Dylan Souvage Portfolio Site" />
+    <meta property="og:url" content="https://firefelix.github.io/dsouvage-homepage/" />
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
