--- a/public/index.html
+++ b/public/index.html
@@ -35,6 +35,22 @@
       html {
         scroll-behavior: smooth;
       }
+      #aboutme {
+        padding-top: 30px;
+        margin-top: -30px;
+      }
+      #Education {
+        padding-top: 50px;
+        margin-top: -50px;
+      }
+      #Experience {
+        padding-top: 50px;
+        margin-top: -50px;
+      }
+      #Involvement {
+        padding-top: 50px;
+        margin-top: -50px;
+      }
     </style>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
