--- a/public/index.html
+++ b/public/index.html
@@ -51,6 +51,9 @@
         padding-top: 50px;
         margin-top: -50px;
       }
+      #Gallery {
+        margin-top: -50px;
+      }
     </style>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
