Remove all resume stuff from gitconnected, replace with RESUME pdf

--- a/public/index.html
+++ b/public/index.html
@@ -51,6 +51,14 @@
         padding-top: 50px;
         margin-top: -50px;
       }
+      #Timeline {
+        padding-top: 50px;
+        margin-top: -50px;
+      }
+      #ResumeFrame {
+        padding-top: 50px;
+        margin-top: -50px;
+      }
       #Gallery {
         margin-top: -50px;
       }
